--- a/magazines.html
+++ b/magazines.html
@@ -1,75 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Magazines | ASCE and AIDIAS</title>
+        <link rel="stylesheet" href="/src/css/color_palattee.css" />
+        <link rel="stylesheet" href="/src/css/header.css" />
+        <link rel="stylesheet" href="/src/css/footer.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+        <link rel="stylesheet" href="/src/css/magazines.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Magazines | ASCE and AIDIAS</title>
-    <link rel="stylesheet" href="/src/css/header.css">
-    <link rel="stylesheet" href="/src/css/footer.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
-    <link rel="stylesheet" href="/src/css/magazines.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-        
-    <style>
-        body {
-            margin-top: 85px;
-        }
-        @media (max-width: 768px) {
+        <style>
             body {
-                margin-top: 80px;
+                margin-top: 85px;
             }
-        }
-    </style>
-</head>
+            @media (max-width: 768px) {
+                body {
+                    margin-top: 80px;
+                }
+            }
+        </style>
+    </head>
 
-<body>
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <body>
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Header -->
-    <header id="header"></header>
+        <!-- Header -->
+        <header id="header"></header>
 
-    <!-- Main -->
-    <main>
-        <div class="container">
-            <div class="dropdown-container">
-                <label for="yearSelect">Select Year:</label>
-                <select id="yearSelect">
-                    <option value="">Select a year</option>
-                    <option value="../../public/magazines/2022-1.pdf">2022 (Issue 1)</option>
-                    <option value="../../public/magazines/2022-2.pdf">2022 (Issue 2)</option>
-                    <option value="../../public/magazines/2023-1.pdf">2023 (Issue 1)</option>
-                    <option value="../../public/magazines/2023-2.pdf">2023 (Issue 2)</option>
-                    <option value="../../public/magazines/2024.pdf">2024 (Issue 1)</option>
-                    <option value="../../public/magazines/2024.pdf">2024 (Issue 2)</option>
-                </select>
-            </div>
+        <!-- Main -->
+        <main>
+            <div class="container">
+                <div class="dropdown-container">
+                    <label for="yearSelect">Select Year:</label>
+                    <select id="yearSelect">
+                        <option value="">Select a year</option>
+                        <option value="../../public/magazines/2022-1.pdf">
+                            2022 (Issue 1)
+                        </option>
+                        <option value="../../public/magazines/2022-2.pdf">
+                            2022 (Issue 2)
+                        </option>
+                        <option value="../../public/magazines/2023-1.pdf">
+                            2023 (Issue 1)
+                        </option>
+                        <option value="../../public/magazines/2023-2.pdf">
+                            2023 (Issue 2)
+                        </option>
+                        <option value="../../public/magazines/2024.pdf">
+                            2024 (Issue 1)
+                        </option>
+                        <option value="../../public/magazines/2024.pdf">
+                            2024 (Issue 2)
+                        </option>
+                    </select>
+                </div>
 
-            <div id="popup">
-                <p>View magazine for <span id="selectedYear"></span>?</p>
-                <button onclick="showPDF()">Yes</button>
-                <button onclick="closePopup()">No</button>
-                <button onclick="downloadPDF()">Download</button>
-            </div>
+                <div id="popup">
+                    <p>View magazine for <span id="selectedYear"></span>?</p>
+                    <button onclick="showPDF()">Yes</button>
+                    <button onclick="closePopup()">No</button>
+                    <button onclick="downloadPDF()">Download</button>
+                </div>
 
-            <div class="pdf-container">
-                <div class="pdf-viewer">
+                <div class="pdf-container">
+                    <div class="pdf-viewer"></div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <!-- Footer -->
-    <footer id="footer"></footer>
+        <!-- Footer -->
+        <footer id="footer"></footer>
 
-    <!-- Scripts -->
-    <script>
-        $("#header").load("/src/pages/header.html");
-        $("#footer").load("/src/pages/footer.html");
-    </script>
-    <script type="module" src="/src/js/magazines.js"></script>
-</body>
-
+        <!-- Scripts -->
+        <script>
+            $("#header").load("/src/pages/header.html");
+            $("#footer").load("/src/pages/footer.html");
+        </script>
+        <script type="module" src="/src/js/magazines.js"></script>
+    </body>
 </html>
