--- a/members.html
+++ b/members.html
@@ -1,156 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Members | ASCE and AIDIAS</title>
+        <link rel="stylesheet" href="/src/css/color_palattee.css" />
+        <link rel="stylesheet" href="/src/css/header.css" />
+        <link rel="stylesheet" href="/src/css/footer.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
+        <link rel="stylesheet" href="/src/css/members.css" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Members | ASCE and AIDIAS</title>
-    <link rel="stylesheet" href="/src/css/header.css">
-    <link rel="stylesheet" href="/src/css/footer.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="/src/css/members.css">
-    
-    <style>
-        body {
-            margin-top: 85px;
-        }
-        @media (max-width: 768px) {
+        <style>
             body {
-                margin-top: 80px;
+                margin-top: 85px;
             }
-        }
-    </style>
-</head>
+            @media (max-width: 768px) {
+                body {
+                    margin-top: 80px;
+                }
+            }
+        </style>
+    </head>
 
-<body>
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <body>
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Header -->
-    <header id="header"></header>
+        <!-- Header -->
+        <header id="header"></header>
 
-    <!-- Main -->
-    <main>
-        <div class="container">
-
-            <div class="content">
-                <div class="members-grid">
-                    <div id="president" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+        <!-- Main -->
+        <main>
+            <div class="container">
+                <div class="content">
+                    <div class="members-grid">
+                        <div id="president" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="vicepresidentco" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="vicepresidentco" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="vicepresidentan" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="vicepresidentan" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="eventmanager1" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="eventmanager1" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="eventmanager2" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="eventmanager2" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="decipline1" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="decipline1" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="decipline2" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="decipline2" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="creativity1" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="creativity1" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="creativity2" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="creativity2" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="sports1" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="sports1" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="sports2" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="sports2" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="tresurer1" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="tresurer1" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="tresurer2" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="tresurer2" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="technicalsec" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="technicalsec" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="technicalmem1" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="technicalmem1" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="technicalmem2" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="technicalmem2" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
-                    </div>
 
-                    <div id="technicalmem3" class="member">
-                        <div class="member-card">
-                            <div class="member-image"></div>
+                        <div id="technicalmem3" class="member">
+                            <div class="member-card">
+                                <div class="member-image"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <!-- Footer -->
-    <footer id="footer"></footer>
+        <!-- Footer -->
+        <footer id="footer"></footer>
 
-    <!-- Scripts -->
-    <script>
-        $("#header").load("/src/pages/header.html");
-        $("#footer").load("/src/pages/footer.html");
-    </script>
-    <script type="module" src="/src/js/members.js"></script>
-</body>
-
+        <!-- Scripts -->
+        <script>
+            $("#header").load("/src/pages/header.html");
+            $("#footer").load("/src/pages/footer.html");
+        </script>
+        <script type="module" src="/src/js/members.js"></script>
+    </body>
 </html>
