--- a/prev-index.html
+++ b/prev-index.html
@@ -1,62 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Home | ASCE and AIDIAS</title>
+        <link rel="stylesheet" href="/src/css/color_palattee.css" />
+        <link rel="stylesheet" href="/src/css/header.css" />
+        <link rel="stylesheet" href="/src/css/footer.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
+        <link rel="stylesheet" href="/src/css/style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | ASCE and AIDIAS</title>
-    <link rel="stylesheet" href="/src/css/header.css">
-    <link rel="stylesheet" href="/src/css/footer.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="/src/css/style.css">
-</head>
+    <body>
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<body>
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!-- Header -->
+        <header id="header"></header>
 
-    <!-- Header -->
-    <header id="header"></header>
-
-    <!-- Main -->
-    <main>
-        <div class="container">
-            <div class="content">
-                <div class="intro-container">
-                    <div class="ineer-intro-div">
-                        <h2>Unity Builds Stronger Teams</h2>
-                        <h4>WELCOME TO STUDENTS COMMITTEE OF CO & AN</h4>
-                        <h1>ASCE & AIDIAS</h1>
-                        <p>The Committee of Thriving Students of the CO & AN departments aims to coordinate all Functions, Events, and any queries from the Students. The Committee is always there to resolve students' problems regarding their academics and to some extent, their personal problems as well. We thank all the students and the teachers for giving us a chance to work in the organization and thinking we deserved the posts. Warm regards from ASCE & AIDIAS.</p>
+        <!-- Main -->
+        <main>
+            <div class="container">
+                <div class="content">
+                    <div class="intro-container">
+                        <div class="ineer-intro-div">
+                            <h2>Unity Builds Stronger Teams</h2>
+                            <h4>WELCOME TO STUDENTS COMMITTEE OF CO & AN</h4>
+                            <h1>ASCE & AIDIAS</h1>
+                            <p>
+                                The Committee of Thriving Students of the CO &
+                                AN departments aims to coordinate all Functions,
+                                Events, and any queries from the Students. The
+                                Committee is always there to resolve students'
+                                problems regarding their academics and to some
+                                extent, their personal problems as well. We
+                                thank all the students and the teachers for
+                                giving us a chance to work in the organization
+                                and thinking we deserved the posts. Warm regards
+                                from ASCE & AIDIAS.
+                            </p>
+                        </div>
                     </div>
-                </div>
 
-                <div class="card-container">
-                    <div class="card-container-content">
-                        <div class="card" id="card1">
-                            <img id="deco" alt="Decoration">
-                        </div>
+                    <div class="card-container">
+                        <div class="card-container-content">
+                            <div class="card" id="card1">
+                                <img id="deco" alt="Decoration" />
+                            </div>
 
-                        <div class="card" id="card2">
-                            <img id="commitee" alt="Committee">
-                        </div>
+                            <div class="card" id="card2">
+                                <img id="commitee" alt="Committee" />
+                            </div>
 
-                        <div class="card" id="card3">
-                            <img id="topper" alt="Topper">
+                            <div class="card" id="card3">
+                                <img id="topper" alt="Topper" />
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+        </main>
 
-    <!-- Footer -->
-    <footer id="footer"></footer>
+        <!-- Footer -->
+        <footer id="footer"></footer>
 
-    <!-- Scripts -->
-    <script src="/src/js/document.js"></script>
-    <script type="module" src="/src/js/main.js"></script>
-</body>
-
+        <!-- Scripts -->
+        <script src="/src/js/document.js"></script>
+        <script type="module" src="/src/js/main.js"></script>
+    </body>
 </html>
