--- a/src/pages/empty_template_page.html
+++ b/src/pages/empty_template_page.html
@@ -1,54 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Resources | ASCE and AIDIAS</title>
+        <link rel="stylesheet" href="/src/css/color_palattee.css" />
+        <link rel="stylesheet" href="/src/css/header.css" />
+        <link rel="stylesheet" href="/src/css/footer.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources | ASCE and AIDIAS</title>
-    <link rel="stylesheet" href="/src/css/header.css">
-    <link rel="stylesheet" href="/src/css/footer.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-
-    <style>
-        body {
-            margin-top: 85px;
-        }
-        @media (max-width: 768px) {
+        <style>
             body {
-                margin-top: 80px;
+                margin-top: 85px;
             }
-        }
-        header a#Resources {
-            color: #ffe600;
-        }
-        main {
-            position: static;
-            min-height: 65vh;
-        }
-    </style>
-</head>
+            @media (max-width: 768px) {
+                body {
+                    margin-top: 80px;
+                }
+            }
+            header a#Resources {
+                color: var(--web-text-hover-light-theme-color);
+            }
+            main {
+                position: static;
+                min-height: 65vh;
+            }
+        </style>
+    </head>
 
-<body>
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <body>
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-    <!-- Header -->
-    <header id="header"></header>
+        <!-- Header -->
+        <header id="header"></header>
 
-    <!-- Main -->
-    <main>
+        <!-- Main -->
+        <main></main>
 
-    </main>
+        <!-- Footer -->
+        <footer id="footer"></footer>
 
-    <!-- Footer -->
-    <footer id="footer"></footer>
-
-    <!-- Scripts -->
-    <script>
-        $("#header").load("/src/pages/header.html");
-        $("#footer").load("/src/pages/footer.html");
-    </script>
-</body>
-
+        <!-- Scripts -->
+        <script>
+            $("#header").load("/src/pages/header.html");
+            $("#footer").load("/src/pages/footer.html");
+        </script>
+    </body>
 </html>
