--- a/src/pages/events/committee_establishment.html
+++ b/src/pages/events/committee_establishment.html
@@ -1,99 +1,175 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Committee Establishment | Events</title>
+        <link rel="stylesheet" href="/src/css/color_palattee.css" />
+        <link rel="stylesheet" href="/src/css/header.css" />
+        <link rel="stylesheet" href="/src/css/footer.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+        />
+        <link rel="stylesheet" href="/src/css/event_showcase.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Committee Establishment | Events</title>
-    <link rel="stylesheet" href="/src/css/header.css">
-    <link rel="stylesheet" href="/src/css/footer.css">
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="/src/css/event_showcase.css">
-</head>
+    <body>
+        <!-- Scripts -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
-<body>
-    <!-- Scripts -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <!-- Header -->
+        <header id="header"></header>
 
-    <!-- Header -->
-    <header id="header"></header>
+        <!-- Main -->
+        <main>
+            <div class="show-container">
+                <!-- Full-width header image -->
+                <img
+                    src="/public/images/events/committee establishment/main.webp"
+                    alt="Header Image"
+                    class="header-image"
+                />
+                <a class="back-button" href="/events.html"
+                    ><i class="fas fa-arrow-left"></i
+                ></a>
 
-    <!-- Main -->
-    <main>
-        <div class="show-container">
-            <!-- Full-width header image -->
-            <img src="/public/images/events/committee establishment/main.webp" alt="Header Image" class="header-image">
-            <a class="back-button" href="/events.html"><i class="fas fa-arrow-left"></i></a>
-
-            <!-- Content section -->
-            <div class="content">
-                <h1>Committee Establishment</h1>
-                <p>
-                    The Committee of ASCE and AIDIAS was established on behalf of Teacher's Day's Event. We took pledge
-                    and got badges as part of our new Identity...✨🌟
-                </p>
-            </div>
-
-            <!-- Placeholder div for additional content -->
-            <div id="image-gallery">
-                <!-- You can add your image gallery here -->
-                <div class="desktop">
+                <!-- Content section -->
+                <div class="content">
+                    <h1>Committee Establishment</h1>
                     <p>
-                        <img class="showcase" src="/public/images/events/committee establishment/1.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/2.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/3.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/4.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/5.webp">
-                    </p>
-
-                    <p>
-                        <img class="showcase" src="/public/images/events/committee establishment/6.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/7.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/8.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/9.webp">
+                        The Committee of ASCE and AIDIAS was established on
+                        behalf of Teacher's Day's Event. We took pledge and got
+                        badges as part of our new Identity...✨🌟
                     </p>
                 </div>
-                <div class="mobile">
+
+                <!-- Placeholder div for additional content -->
+                <div id="image-gallery">
+                    <!-- You can add your image gallery here -->
+                    <div class="desktop">
+                        <p>
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/1.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/2.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/3.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/4.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/5.webp"
+                            />
+                        </p>
+
+                        <p>
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/6.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/7.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/8.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/9.webp"
+                            />
+                        </p>
+                    </div>
+                    <div class="mobile">
+                        <p>
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/1.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/2.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/3.webp"
+                            />
+                        </p>
+                        <p>
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/4.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/5.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/6.webp"
+                            />
+                        </p>
+                        <p>
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/7.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/8.webp"
+                            />
+                            <img
+                                class="showcase"
+                                src="/public/images/events/committee establishment/9.webp"
+                            />
+                        </p>
+                    </div>
+                </div>
+                <div class="content socials">
                     <p>
-                        <img class="showcase" src="/public/images/events/committee establishment/1.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/2.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/3.webp">
+                        Here are some photos from the Event. <br />
+                        See more on Social Media or visit GDrive to access all
+                        Photos & Videos.
                     </p>
-                    <p>
-                        <img class="showcase" src="/public/images/events/committee establishment/4.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/5.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/6.webp">
-                    </p>
-                    <p>
-                        <img class="showcase" src="/public/images/events/committee establishment/7.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/8.webp">
-                        <img class="showcase" src="/public/images/events/committee establishment/9.webp">
-                    </p>
+                    <div class="icons">
+                        <a
+                            class="icon1"
+                            href="https://www.linkedin.com/feed/update/urn:li:activity:7238387448462880769"
+                            ><img src="/public/images/linkedin.webp"
+                        /></a>
+                        <a
+                            class="icon2"
+                            href="https://www.instagram.com/asce_committee_gpcs"
+                            ><img src="/public/images/instagram.webp"
+                        /></a>
+                        <a
+                            class="icon3"
+                            href="https://drive.google.com/drive/folders/1r2UFg-kYnEKdW_8j1S60lvg-ab5Mpz3K?usp=drive_link"
+                            ><img src="/public/images/google-drive.webp"
+                        /></a>
+                    </div>
                 </div>
             </div>
-            <div class="content socials">
-                <p>
-                    Here are some photos from the Event. <br> See more on Social Media or visit GDrive to access all Photos &
-                    Videos.
-                </p>
-                <div class="icons">
-                    <a class="icon1" href="https://www.linkedin.com/feed/update/urn:li:activity:7238387448462880769"><img src="/public/images/linkedin.webp"></a>
-                    <a class="icon2" href="https://www.instagram.com/asce_committee_gpcs"><img src="/public/images/instagram.webp"></a>
-                    <a class="icon3" href="https://drive.google.com/drive/folders/1r2UFg-kYnEKdW_8j1S60lvg-ab5Mpz3K?usp=drive_link"><img src="/public/images/google-drive.webp"></a>
-                </div>
-            </div>
-        </div>
-    </main>
+        </main>
 
-    <!-- Footer -->
-    <footer id="footer"></footer>
+        <!-- Footer -->
+        <footer id="footer"></footer>
 
-    <!-- Scripts -->
-    <script>
-        $("#header").load("/src/pages/header.html");
-        $("#footer").load("/src/pages/footer.html");
-    </script>
-</body>
-
+        <!-- Scripts -->
+        <script>
+            $("#header").load("/src/pages/header.html");
+            $("#footer").load("/src/pages/footer.html");
+        </script>
+    </body>
 </html>
